<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <TextView
            android:id="@+id/settings"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:fontFamily="@font/bangers"
            android:text="@string/setting"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/news"
            android:layout_marginTop="10dp"
            android:paddingTop="7dp"
            android:layout_below="@id/settings"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/bangers"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:text="@string/profile">
         </TextView>

        <TextView
            android:id="@+id/preference"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/news"
            android:layout_marginTop="10dp"
            android:paddingTop="7dp"
            android:layout_below="@id/profile"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/bangers"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:text="@string/preference">
        </TextView>

        <TextView
            android:id="@+id/saved"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/news"
            android:layout_marginTop="10dp"
            android:paddingTop="7dp"
            android:layout_below="@id/preference"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/bangers"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:text="@string/savednews">
        </TextView>

        <TextView
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/news"
            android:layout_marginTop="10dp"
            android:paddingTop="7dp"
            android:layout_below="@id/saved"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/bangers"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:text="@string/Policy">
        </TextView>

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_below="@id/policy"
            android:layout_centerHorizontal="true"
            android:text="@string/logout"
            android:background="@drawable/news"
            android:fontFamily="@font/bangers"
            android:textColor="@color/black"
            android:textSize="18sp"/>



    </RelativeLayout>
</ScrollView>