<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="45sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        tools:ignore="RtlSymmetry" />


    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="330dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangers"
            android:text="@string/createAcc"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/loginLl"
            android:layout_below="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="        name"/>

            <EditText
                android:id="@+id/enterName"
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:paddingStart="9dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingEnd="4dp"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:textSize="14sp"
                android:background="@drawable/ediittext"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginL2"
            android:layout_below="@+id/loginLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/phonenumber"/>

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:paddingStart="9dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingEnd="4dp"
                android:inputType="phone"
                android:hint="@string/phonenumber"
                android:textSize="14sp"
                android:background="@drawable/ediittext"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/loginL3"
            android:layout_below="@+id/loginL2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="        email"/>

            <EditText
                android:id="@+id/enterEmail"
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:paddingStart="9dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingEnd="4dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textSize="14sp"
                android:background="@drawable/ediittext"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginL4"
            android:layout_below="@+id/loginL3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/password"
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:paddingStart="9dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingEnd="4dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:background="@drawable/ediittext"/>
        </LinearLayout>

        <TextView
            android:id="@+id/OTP"
            android:layout_below="@+id/loginL4"
            android:textSize="13sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:text="@string/pleaseOTP"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_below="@+id/OTP"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ediittext"
            android:fontFamily="@font/bangers"
            android:textSize="20sp"
            android:layout_marginTop="25dp" />


        <TextView
            android:id="@+id/goBack"
            android:layout_below="@+id/signUp"
            android:textSize="18sp"
            android:layout_marginTop="80dp"
            android:textColor="@color/black"
            android:fontFamily="@font/bangers"
            android:layout_marginRight="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goBack"/>
    </RelativeLayout>

    </RelativeLayout>
</ScrollView>